Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -16,6 +16,7 @@
 
 .container {
     z-index: 1000;
+    position: absolute;
 }
 
   .header {
